# systray-doom

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  systray-doom.sln
Systray.Trimming.TestApp/: Program.cs  README.md  Systray.Trimming.TestApp.csproj
Systray.UnitTests/: Systray.UnitTests.csproj  TrayIconUnitTests.cs
docs/notes/: Icon_Metadata.md
robust_systray/: Class1.cs  NativeMethods.txt  TrayIcon.cs  robust_systray.csproj
rust_bindings/: rust_bindings.csproj
rust_bindings/src/: lib.rs  main.rs  tray_icon_message.rs
rust_bindings2/: Cargo.toml  build.rs
src/: lib.rs  main.rs  tray_icon_message.rs  window.rs
systray/: Assembly.cs  Class1.cs  NativeMethods.json  NativeMethods.txt  NoReleaseSafeHandle.cs  PInvokeHelpers.cs  PhysicalPoint.cs  Point.cs  README.md  THIRD-PARTY-NOTICES.txt  TrayIcon.cs  TrayIconMessageBuilder.cs  WindowMessageHandler.cs  WindowSubclassHandler.cs  systray.csproj
systray/NativeTypes/: InlineArrayIndexerExtensions.cs  InlineArrays.cs  NoReleaseHwnd.cs  NotifyIcon.cs  PInvokeCore.GetWindowLong.cs  PInvokeCore.SetWindowLong.cs  PInvokeCore.Shell_NotifyIcon.cs  SpanHelpers.cs
systray_doom/: CompositionHelpers.cs  Constants.cs  CrayonConsoleFormatter.cs  Doom.cs  MenuHelpers.cs  MenuItemInfoBuilder.cs  NativeMethods.json  NativeMethods.txt  NoReleaseSafeHandle.cs  PInvokeDoom.cs  PInvokeHelpers.cs  Program.cs  TrayIcon.cs  TrayIconMessageBuilder.cs  WindowMessageHandler.cs  WindowSubclassHandler.cs  systray_doom.csproj
