[package]
name = "systray-doom"
version = "0.1.0"
edition = "2021"

[dependencies]
doomgeneric = { path = "../doomgeneric-rs", version = "0.3.0-beta.2" }

[dependencies.windows]
version = "0.56.0"
features = [
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
cc = "1.0"
