[package]
name = "systray-doom"
version = "0.1.0"
edition = "2021"

[dependencies]
# doomgeneric = { path = "../doomgeneric-rs", version = "0.3.0-beta.2" }
doomgeneric = { version = "0.3.0-beta.2" }

[dependencies.windows]
version = "0.56.0"
# https://microsoft.github.io/windows-rs/features/#/master
features = [
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",

    # Shell notify icon
    "Win32_UI_Shell_Common",

    "Win32_UI_WindowsAndMessaging",

    # VK codes
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
cc = "1.0"
